Fix tailwind dark mode on keychain

--- a/packages/keychain/src/index.css
+++ b/packages/keychain/src/index.css
@@ -5,3 +5,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  background: hsla(var(--background));
+  color: hsla(var(--foreground));
+}
